nav, section title, projects layout on mobile fixed

--- a/assets/style/cards.css
+++ b/assets/style/cards.css
@@ -41,6 +41,11 @@
 * Main Project Card
 */
 
+.main-project-card {
+    display: flex;
+    flex-direction: column;
+}
+
 .main-project-card .card {
     background-color: var(--primary400);
     border-radius: 0.5rem;
