--- a/assets/style/navigation.css
+++ b/assets/style/navigation.css
@@ -56,8 +56,8 @@ nav ul {
 }
 
 .nav-mobile li {
-    font-size: var(--h1-fs);
-    font-family: var(--title-display);
+    font-size: var(--h2-fs);
+    font-family: var(--title-monospace);
 
     margin-block: 1rem;
     margin-right: 1rem;
@@ -65,6 +65,10 @@ nav ul {
 
 .nav-mobile li:first-child {
     margin-top: 45vh;
+}
+
+.nav-mobile span {
+    margin-right: 1rem;
 }
 
 .nav-mobile a {
@@ -102,7 +106,7 @@ nav ul {
 
     .nav-desktop li {
         margin-inline: 3rem;
-        font-family: var(--title-monospace);
+        /* font-family: var(--title-monospace); */
         font-size: var(--body1-fs);
         position: relative;
     }
